# auth_backends_implement

auth_sqlite_python/: CLAUDE.md  config.py  database.py  main.py  pyproject.toml  run.py
auth_sqlite_python/database/: users.db
auth_sqlite_python/src/: auth.py  routes.py  schemas.py
